Version 3.1.0 Revise layout issue -> Layout exceeds screen width in small devices.

--- a/static/attraction.css
+++ b/static/attraction.css
@@ -21,22 +21,21 @@ main .section1ImageAndBooking .attractionsImagesShow{
     padding-right: 10px; */
     margin-left: 10px;
     margin-right: 10px;
-    width: 540px;
-    height: 406px;
 }
 main .section1ImageAndBooking .attractionsImagesShow img{
     position: relative;
+    object-fit: cover;
     width: 540px;
     height: 406px;
     left: 0px;
-    top: -3px;
+    top: 0px;
     border-radius: 5px;
 }
 main .section1ImageAndBooking .attractionsImagesShow .leftButton{
     position:absolute;
     width: 36px;
     height: 36px;
-    left: 3%; 
+    left: 4%; 
     top: 50%;
     z-index: 10;
     opacity: 0.6;
@@ -252,7 +251,7 @@ main .section1ImageAndBooking .nameAndBooking .bookingBlock .timeChooseBlock{
     position: absolute;
     display: flex;
     align-items: center;
-    width: 400px;
+    width: auto;
     height: 33px;
     left: 20px;
     top: 140px;
@@ -287,7 +286,7 @@ main .section1ImageAndBooking .nameAndBooking .bookingBlock .timeChooseBlock .ti
     display: flex;
     align-items: center;
     
-    width: 400px;
+    width: auto;
     height: 33px;
     left: 86px;
     top: 0px;
@@ -301,7 +300,7 @@ main .section1ImageAndBooking .nameAndBooking .bookingBlock .timeChooseBlock .ti
     cursor: pointer;
 
     background-color: #FFFFFF;
-    top: -4px;
+    top: -2px;
     left: -2px;
     position: relative;
     content: '';
@@ -315,14 +314,11 @@ main .section1ImageAndBooking .nameAndBooking .bookingBlock .timeChooseBlock .ti
     width: 13px;
     height: 13px;
     border-radius: 16px;
-    align-items: center;
-  
+    align-items: center;  
     cursor: pointer;
 
-    background-color: #448899;  
-
-
-    top: -4px;
+    background-color: #448899;
+    top: -2px;
     left: -2px;
     position: relative;
     content: '';
@@ -357,7 +353,7 @@ main .section1ImageAndBooking .nameAndBooking .bookingBlock .guidePriceBlock{
     position: absolute;
     display: flex;
     align-items: center;
-    width: 400px;
+    width: auto;
     height: 33px;
     left: 20px;
     top: 180px;
@@ -388,7 +384,7 @@ main .section1ImageAndBooking .nameAndBooking .bookingBlock .guidePriceBlock .gu
 
 main .section1ImageAndBooking .nameAndBooking .bookingBlock .guidePriceBlock div{
     position: absolute;
-    width: 200px;
+    width: 150px;
     height: 14px;
     left: 86px;
     /* top: 4px; */
@@ -512,16 +508,20 @@ main .descriptionAndAddress .boldTitle{
 }
 
 @media (max-width: 1200px){
+    main{
+        z-index: 1;
+        margin-top: 0px;
+    }
     /* Section 1 */
     main .section1ImageAndBooking{
         height: auto;
+        width: 100%;
         display: flex;
         flex-direction: column;
-        width: 100%;
     }
     main .section1ImageAndBooking .attractionsImagesShow{
-        height: auto;
         width: 100%;
+        height: auto;    
         background-size: cover;
         justify-content: center;
         flex-direction: column;
@@ -529,7 +529,7 @@ main .descriptionAndAddress .boldTitle{
     }
     main .section1ImageAndBooking .attractionsImagesShow img{
         width: 100%;
-        height: auto;
+        /* height: auto; */
         background-position: center 25%;
         background-size: cover;
         justify-content: center;
@@ -551,6 +551,9 @@ main .descriptionAndAddress .boldTitle{
     main .section1ImageAndBooking .nameAndBooking .bookingBlock{
         width: 100%;
         /* padding: 0px; */
+    }
+    main .section1ImageAndBooking .nameAndBooking .bookingBlock .bookingDescription{
+        width: 90%;
     }
     main .spacer{
         width: 95%;
